[package]
name = "picow"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
nom = "7.1.3"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

[dependencies.winapi]
version = "0.3.9"
features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon", "impl-default", "winnt"]
